--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Llegeix manga en català</h1>
         <h2>A la nostra web podràs trobar infinitat
-            de manga en <strong>català</strong>.
+            de manga (i anime) en català.
         </h2>
+        <h3> Bola de drac </h3>
+            <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
+            width="342.5" height="500">
 </body>
 </html>
