Afegit Descripcio de Bola de Drac i img

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Llegeix manga en català</h1>
-        <h2>A la nostra web podràs trobar infinitat
-            de manga (i anime) en català.
+        <h2>Podràs trobar varis mangas en català i informació sobre ells
         </h2>
         <h3> Bola de drac </h3>
             <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
