Afegit link per a Bola de Drac

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <h3> Bola de drac </h3>
             <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
             width="342.5" height="500">
-            <a href=""></a>
+            <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
 </body>
 </html>
