Arreglat typo i afegit salt de linia

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </h2>
         <h3> Bola de drac </h3>
             <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
-            width="342.5" height="500">
+            width="342.5" height="500"> <br>
             <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
 </body>
 </html>
