--- a/DragonBall/manga1.html
+++ b/DragonBall/manga1.html
@@ -6,7 +6,7 @@
     <title>Bola de drac en catala</title>
 </head>
 <body>
-    <h1>Bola de drac en catala i la seva historia</h1>
+    <h1>Bola de drac en català i la seva historia</h1>
     <h3>Historia</h3>
     <p>Qui no coneix a Goku i els seus amics?
        Amb el pas del temps, bola de drac s'ha anat
@@ -14,7 +14,7 @@
        originaris d'aquest tipus de productes.
        L'història tracta d'un nen que viu a la terra, en Goku
         amb una força extraordinaria i una cua, no cal saber res més
-        per començar a llegir...
+        per començar a llegir... <br>
         <img src="./imgs/historia.jpg" alt="gokuvegeta"
         height="423" width="295">
     </p>
