Afegit entrada per a SandLand a la HomePage

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <h1>Llegeix manga en català</h1>
         <h2>Podràs trobar varis mangas en català i informació sobre ells
         </h2>
-        <h3> Bola de drac </h3>
+        <ul>
+            <li><h3> Bola de drac </h3> </li>
             <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
             width="342.5" height="500"> <br>
             <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
+            
+            <li><h3> SandLand </h3></li>
+            <img src="./imgs/sand-land.jpg" alt = "Manga de SandLand"
+            widht = "600" height = "800"> <br>
+            <a href="./DragonBall/manga2.html" rel= "noopener noreferer">Clica per anar a SandLand</a>
+        </ul>
 </body>
 </html>
