Afegit pagina SandLand

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             
             <li><h3> SandLand </h3></li>
             <img src="./imgs/sand-land.jpg" alt = "Manga de SandLand"
-            widht = "600" height = "800"> <br>
-            <a href="./DragonBall/manga2.html" rel= "noopener noreferer">Clica per anar a SandLand</a>
+            widht = "342.5" height = "500"> <br>
+            <a href="./SandLand/manga2.html" rel= "noopener noreferer">Clica per anar a SandLand</a>
 
         </ul>
 </body>
