From now on commits will be in english. Added first css changes.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaEnCatala</title>
 </head>
 <body>
-    <h1>Llegeix manga en català</h1>
-        <h2>Podràs trobar varis mangas en català i informació sobre ells
-        </h2>
-        <ul>
-            <li><h3> Bola de drac </h3> </li>
-            <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac"
-            width="342.5" height="500"> <br>
+    <div>
+    <h1 class="header" id="main">Llegeix manga en català</h1>
+    <h2 class="header">Podràs trobar varis mangas en català i informació sobre ells</h2>
+    </div>
+    <ul class="mangaList">
+        <li class="mangaInList">
+            <h3 class="subheader">Bola de drac</h3>
+            <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac" width="342.5" height="500"> <br>
             <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
-            
-            <li><h3> SandLand </h3></li>
-            <img src="./imgs/sand-land.jpg" alt = "Manga de SandLand"
-            widht = "342.5" height = "500"> <br>
-            <a href="./SandLand/manga2.html" rel= "noopener noreferer">Clica per anar a SandLand</a>
-
-        </ul>
+        </li>
+        <li class = "mangaInList">
+            <h3 class="subheader">SandLand</h3>
+            <img src="./imgs/sand-land.jpg" alt="Manga de SandLand" width="342.5" height="500"> <br>
+            <a href="./SandLand/manga2.html" rel="noopener noreferer">Clica per anar a SandLand</a>
+        </li>
+    </ul>
 </body>
 </html>
