--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MangaEnCatala</title>
 </head>
 <body>
-    <div>
+    <div id ="mainblock">
     <h1 class="header" id="main">Llegeix manga en català</h1>
     <h2 class="header">Podràs trobar varis mangas en català i informació sobre ells</h2>
     </div>
