Added Personal page (to be done) and main header with logos

--- a/index.html
+++ b/index.html
@@ -6,19 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaEnCatala</title>
 </head>
+
 <body>
+    <header id="main-header">
+        <a id = "mainName" href="#">MangaEnCatala</a>
+        <nav>
+            <ul>
+                <div class="icons">
+                    <img src="./imgs/boladedraclogo.png" alt = "boladedraclogo" width="20" height="20"> 
+                    <li><a href="DragonBall/manga1.html">DragonBall</a></li>
+                    <img src="./imgs/sandlandlogo.png" alt = "sandlandlogo" width="20" height="20"> 
+                    <li><a href="SandLand/manga2.html">SandLand</a></li>
+                    <img src="./imgs/personalogo.png" alt = "personalogo" width="17" height="15"> 
+                    <li><a href="AboutMe/index.html">AboutMe</a></li>
+                </div>
+            </ul>
+        </nav>
+    
+    
+    </header>
     <div id ="mainblock">
-    <h1 class="header" id="main">Llegeix manga en català</h1>
-    <h2 class="header">Podràs trobar varis mangas en català i informació sobre ells</h2>
+        <h1 class="title" id="main">Llegeix manga en català</h1>
+        <h2 class="title">Podràs trobar varis mangas en català i informació sobre ells</h2>
     </div>
     <ul class="mangaList">
         <li class="mangaInList">
-            <h3 class="subheader">Bola de drac</h3>
+            <h3 class="subtitle">Bola de drac</h3>
             <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac" width="342.5" height="500"> <br>
             <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
         </li>
         <li class = "mangaInList">
-            <h3 class="subheader">SandLand</h3>
+            <h3 class="subtitle">SandLand</h3>
             <img src="./imgs/sand-land.jpg" alt="Manga de SandLand" width="342.5" height="500"> <br>
             <a href="./SandLand/manga2.html" rel="noopener noreferer">Clica per anar a SandLand</a>
         </li>
