changes to the style of homepage

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <header id="main-header">
+    <header class="main-header">
         <a id = "mainName" href="#">MangaEnCatala</a>
+        <p>Descubreix|Disfruta|Apren</p>
         <nav>
             <ul>
                 <div class="icons">
