more style changes, added flexbox to header and mangalist

--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
 
 <body>
     <header class="main-header">
+        <div class="lefth">
         <a id = "mainName" href="#">MangaEnCatala</a>
         <p>Descubreix|Disfruta|Apren</p>
+        </div>
         <nav>
             <ul>
                 <div class="icons">
-                    <img src="./imgs/boladedraclogo.png" alt = "boladedraclogo" width="20" height="20"> 
-                    <li><a href="DragonBall/manga1.html">DragonBall</a></li>
-                    <img src="./imgs/sandlandlogo.png" alt = "sandlandlogo" width="20" height="20"> 
-                    <li><a href="SandLand/manga2.html">SandLand</a></li>
-                    <img src="./imgs/personalogo.png" alt = "personalogo" width="17" height="15"> 
-                    <li><a href="AboutMe/index.html">AboutMe</a></li>
+                    <div class="icon">
+                        <img src="./imgs/boladedraclogo.png" alt = "boladedraclogo" width="20" height="20"> 
+                        <li><a href="DragonBall/manga1.html">DragonBall</a></li>
+                    </div>
+                    <div class="icon">
+                        <img src="./imgs/sandlandlogo.png" alt = "sandlandlogo" width="20" height="20"> 
+                        <li><a href="SandLand/manga2.html">SandLand</a></li>
+                    </div>
+                    <div class="icon">
+                        <img src="./imgs/personalogo.png" alt = "personalogo" width="17" height="15"> 
+                        <li><a href="AboutMe/index.html">AboutMe</a></li>
+                    </div>
                 </div>
             </ul>
         </nav>
