added footer with flexbox

--- a/index.html
+++ b/index.html
@@ -34,21 +34,29 @@
     
     
     </header>
-    <div id ="mainblock">
-        <h1 class="title" id="main">Llegeix manga en català</h1>
-        <h2 class="title">Podràs trobar varis mangas en català i informació sobre ells</h2>
+    <div class="main">
+        <div id ="mainblock">
+            <h1 class="title" id="main">Llegeix manga en català</h1>
+            <h2 class="title">Podràs trobar varis mangas en català i informació sobre ells</h2>
+        </div>
+        <ul class="mangaList">
+            <li class="mangaInList">
+                <h3 class="subtitle">Bola de drac</h3>
+                <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac" width="342.5" height="500"> <br>
+                <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
+            </li>
+            <li class = "mangaInList">
+                <h3 class="subtitle">SandLand</h3>
+                <img src="./imgs/sand-land.jpg" alt="Manga de SandLand" width="342.5" height="500"> <br>
+                <a href="./SandLand/manga2.html" rel="noopener noreferer">Clica per anar a SandLand</a>
+            </li>
+        </ul>
     </div>
-    <ul class="mangaList">
-        <li class="mangaInList">
-            <h3 class="subtitle">Bola de drac</h3>
-            <img src="./imgs/boladedrac.jpg" alt="Manga De Bola de drac" width="342.5" height="500"> <br>
-            <a href="./DragonBall/manga1.html" rel="noopener noreferer">Clica per anar a Bola de Drac</a>
-        </li>
-        <li class = "mangaInList">
-            <h3 class="subtitle">SandLand</h3>
-            <img src="./imgs/sand-land.jpg" alt="Manga de SandLand" width="342.5" height="500"> <br>
-            <a href="./SandLand/manga2.html" rel="noopener noreferer">Clica per anar a SandLand</a>
-        </li>
-    </ul>
+    <div class="footer">
+        <ul>
+            <li><a href="https://github.com/DidacDV" rel = "noopener noreferer">My GitHub</a></li>
+            <li><a href="https://github.com/DidacDV/MangaEnCatala" rel = "noopener noreferer">This page source code</a></li>
+        </ul>
+    </div>
 </body>
 </html>
